--- a/HW18_1.vcxproj
+++ b/HW18_1.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="HW18_1.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Date.h" />
     <ClInclude Include="Employee.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
